--- a/slack-bot/package.json
+++ b/slack-bot/package.json
@@ -2,6 +2,9 @@
   "name": "bot-new-slack-bot",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --watch src/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
