--- a/platform/package.json
+++ b/platform/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
+    "@neondatabase/api-client": "^1.11.5",
     "@neondatabase/serverless": "^0.10.4",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
