--- a/slack-bot/package.json
+++ b/slack-bot/package.json
@@ -3,11 +3,13 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
+    "start": "bun run src/index.ts",
     "dev": "bun --watch src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.4",
     "@types/bun": "latest",
     "drizzle-kit": "^0.30.4"
   },
