--- a/platform/package.json
+++ b/platform/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.0",
     "fastify": "^5.2.1",
+    "tar": "^7.4.3",
     "uuid": "^11.0.5"
   }
 }
