--- a/platform/package.json
+++ b/platform/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.4",
+    "@types/adm-zip": "^0.5.7",
     "@types/bun": "latest",
     "@types/pg": "^8.11.11",
+    "@types/unzipper": "^0.10.10",
     "drizzle-kit": "^0.30.3",
     "tsx": "^4.19.2"
   },
@@ -27,7 +29,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.0",
     "fastify": "^5.2.1",
-    "tar": "^7.4.3",
+    "unzipper": "^0.12.3",
     "uuid": "^11.0.5"
   }
 }
