Feat/code editor (#8)
Co-authored-by: David Gomes <davidrafagomes@gmail.com>

--- a/platform/apps/admin/.env.example
+++ b/platform/apps/admin/.env.example
@@ -1,16 +1,7 @@
-# Use npx auth secret to generate:
-AUTH_SECRET="secret"
-
-# Usefult on dev if you do next build & start to allow auth.js to work from localhost:
-AUTH_TRUST_HOST="locahost"
-
-# Set to allow simple username/password login:
-AUTH_USERNAME="admin"
-AUTH_PASSWORD="changeme"
-
-# If present, enable Google auth:
-#GOOGLE_CLIENT_ID="1234567890"
-#GOOGLE_CLIENT_SECRET="1234567890"
+# Stack Auth
+NEXT_PUBLIC_STACK_PROJECT_ID=''
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=''
+STACK_SECRET_SERVER_KEY=''
 
 # Access to the Platform API:
 PLATFORM_API_URL="http://localhost:4444"
