--- a/platform/apps/admin/package.json
+++ b/platform/apps/admin/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "saas",
+  "name": "admin",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "vercel-build": "bun db:migrate && next build",
     "start": "next start",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.3",
+    "@codemirror/lang-javascript": "^6.2.3",
     "@hookform/resolvers": "^3.9.0",
     "@next-safe-action/adapter-react-hook-form": "^1.0.13",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -27,6 +28,9 @@
     "@repo/design": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@uiw/codemirror-theme-vscode": "^4.23.8",
+    "@uiw/react-codemirror": "^4.23.8",
+    "jszip": "^3.10.1",
     "next": "15.1.4",
     "next-safe-action": "^7.10.2",
     "react": "19.0.0",
