--- a/platform/Dockerfile.backend
+++ b/platform/Dockerfile.backend
@@ -7,7 +7,7 @@ FROM oven/bun:${BUN_VERSION}-slim AS base
 LABEL fly_launch_runtime="Bun"
 
 # Bun app lives here
-WORKDIR /app
+WORKDIR /platform
 
 # Set production environment
 ENV NODE_ENV="production"
@@ -26,20 +26,21 @@ RUN apt-get update -qq && \
 RUN curl -L https://fly.io/install.sh | sh
 
 # Install node modules
-COPY bun.lockb package.json ./
-RUN bun install --ci
+# COPY bun.lock package.json ./
 
 # Copy application code
-COPY . .
+COPY ./ /platform
 
+RUN bun install --ci --filter "backend"
 
 # Final stage for app image
 FROM base
 
 # Copy built application
-COPY --from=build /app /app
+COPY --from=build /platform /platform
 COPY --from=build /root /root
 
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
+WORKDIR /platform/apps/backend
 CMD [ "bun", "run", "start" ]
