--- a/platform/apps/admin/package.json
+++ b/platform/apps/admin/package.json
@@ -25,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
+    "babel-plugin-react-compiler": "^19.0.0-beta-21e868a-20250216",
     "jszip": "^3.10.1",
     "next": "15.1.4",
     "next-safe-action": "^7.10.2",
