replace http calls with polling

--- a/slack-bot/.env.example
+++ b/slack-bot/.env.example
@@ -1,3 +1,5 @@
-TOKEN=xoxb-123
-SIGNING_SECRET=123
-APP_TOKEN=xapp-0-123
+APP_TOKEN=...
+DATABASE_URL=...
+SIGNING_SECRET=...
+TOKEN=...
+BACKEND_API_SECRET=...
