--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
+    "@fastify/schedule": "^6.0.0",
     "@neondatabase/api-client": "^1.11.5",
     "@neondatabase/serverless": "^0.10.4",
     "@repo/core": "workspace:*",
@@ -29,6 +30,7 @@
     "drizzle-orm": "^0.39.0",
     "fastify": "^5.2.1",
     "jose": "^5.10.0",
+    "toad-scheduler": "^3.0.1",
     "unzipper": "^0.12.3",
     "uuid": "^11.0.5"
   }
