--- a/slack-bot/package.json
+++ b/slack-bot/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@slack/bolt": "^4.2.0",
+    "cron": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1"
   }
