fixes slack bot

--- a/slack-bot/package.json
+++ b/slack-bot/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "dev": "bun --watch src/index.ts",
+    "format": "prettier --write \"**/*.{ts,tsx,md,js,jsx,json,css}\"",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
