--- a/app-build-cli/tsconfig.json
+++ b/app-build-cli/tsconfig.json
@@ -1,9 +1,33 @@
 {
-	"extends": "@sindresorhus/tsconfig",
-	"compilerOptions": {
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
-		"outDir": "dist"
-	},
-	"include": ["src"]
+  "compilerOptions": {
+    "outDir": "dist",
+
+    /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    // react
+    "jsx": "react-jsx",
+
+    /* Strictness */
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    /* If transpiling with TypeScript: */
+    "module": "NodeNext",
+    "sourceMap": true,
+    /* If your code doesn't run in the DOM: */
+    "lib": ["es2022"],
+
+    // for easing development
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
+  },
+  "include": ["src"]
 }
