--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -18,10 +18,12 @@
   ],
   "dependencies": {
     "@inkjs/ui": "2.0.0",
+    "dotenv": "^16.4.7",
     "ink": "5.2.0",
     "ink-syntax-highlight": "2.0.2",
     "meow": "13.2.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "ink-spinner": "^5.0.0"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^3.0.1",
