--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "bin": {
     "slack-bot-cli": "./app-build-cli/dist/cli.js"
   },
-  "scripts": {
-    "postinstall": "cd app-build-cli && npm install"
+  "dependencies": {
+    "@inkjs/ui": "2.0.0",
+    "dotenv": "^16.4.7",
+    "ink": "5.2.0",
+    "ink-syntax-highlight": "2.0.2",
+    "meow": "13.2.0",
+    "react": "^18.2.0",
+    "ink-spinner": "^5.0.0"
   }
 }
