--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -23,7 +23,8 @@
     "ink-syntax-highlight": "2.0.2",
     "meow": "13.2.0",
     "react": "18.2.0",
-    "ink-spinner": "5.0.0"
+    "ink-spinner": "5.0.0",
+    "node-fetch": "3.3.2"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^3.0.1",
