--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ink-syntax-highlight": "2.0.2",
     "meow": "13.2.0",
     "react": "^18.2.0",
-    "ink-spinner": "^5.0.0"
+    "ink-spinner": "5.0.0",
+    "node-fetch": "3.3.2"
   }
 }
