--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bot-new-slack-bot",
   "bin": {
-    "slack-bot-cli": "./app-build-cli/dist/cli.js"
+    "app-build-cli": "./app-build-cli/dist/cli.js"
   },
   "dependencies": {
     "app-build-cli": "file:./app-build-cli"
