--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -18,25 +18,25 @@
   ],
   "dependencies": {
     "@inkjs/ui": "2.0.0",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
     "ink": "5.2.0",
     "ink-syntax-highlight": "2.0.2",
     "meow": "13.2.0",
-    "react": "18.2.0",
-    "ink-spinner": "5.0.0",
+    "react": "^18.2.0",
+    "ink-spinner": "^5.0.0",
     "node-fetch": "3.3.2"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^3.0.1",
-    "@types/react": "18.0.32",
+    "@types/react": "^18.0.32",
     "bun": "1.2.5",
-    "chalk": "5.2.0",
-    "eslint-config-xo-react": "0.27.0",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "ink-testing-library": "3.0.0",
-    "prettier": "2.8.7",
-    "typescript": "5.0.3",
-    "xo": "0.53.1"
+    "chalk": "^5.2.0",
+    "eslint-config-xo-react": "^0.27.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "ink-testing-library": "^3.0.0",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.3",
+    "xo": "^0.53.1"
   }
 }
