--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -9,7 +9,7 @@
     "tsx": "4.19.2"
   },
   "scripts": {
-    "start": "bun run src/index.ts",
+    "start": "drizzle-kit generate && drizzle-kit migrate && bun run src/index.ts",
     "dev": "bun run --watch src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
