--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
 
       - name: Run Lint
         working-directory: platform
-        run: bun run lint
+        run:
+          - echo "Debug: $STACK_SECRET_SERVER_KEY is present"
+          - bun run lint
 
       - name: Backend - Install Dependencies
         working-directory: platform/apps/backend
