--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "prettier --check . && xo && ava",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "start": "node dist/cli.js"
   },
   "files": [
     "dist"
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "@sindresorhus/tsconfig": "^3.0.1",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/react": "^18.0.32",
     "bun": "1.2.5",
     "chalk": "^5.2.0",
@@ -40,8 +42,12 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "ink-testing-library": "^3.0.0",
     "prettier": "^2.8.7",
+    "react-devtools-core": "^6.1.1",
     "typescript": "5.8.2",
     "typescript-eslint": "8.28.0",
     "xo": "^0.53.1"
+  },
+  "patchedDependencies": {
+    "@tanstack/query-core@5.69.0": "patches/@tanstack%2Fquery-core@5.69.0.patch"
   }
 }
