--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "5.69.0",
     "dotenv": "^16.4.7",
     "ink": "5.2.0",
+    "ink-select-input": "6.0.0",
     "ink-spinner": "^5.0.0",
     "ink-syntax-highlight": "2.0.2",
     "ink-text-input": "6.0.0",
@@ -36,7 +37,7 @@
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/react": "^18.0.32",
     "bun": "1.2.5",
-    "chalk": "^5.2.0",
+    "chalk": "4.1.2",
     "eslint": "9.23.0",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
