--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -29,6 +29,7 @@
     "meow": "13.2.0",
     "node-fetch": "3.3.2",
     "react": "^18.2.0",
+    "zod": "^3.24.2",
     "zustand": "5.0.3"
   },
   "devDependencies": {
