--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,17 @@ jobs:
 
       - name: Backend - Test
         working-directory: platform/apps/backend
+        env:
+          FLY_IO_TOKEN: ${{ secrets.FLY_IO_TOKEN }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
+          AGENT_API_SECRET_AUTH: ${{ secrets.AGENT_API_SECRET_AUTH }}
+          DEPLOYED_BOT_AWS_ACCESS_KEY_ID: ${{ secrets.DEPLOYED_BOT_AWS_ACCESS_KEY_ID }}
+          DEPLOYED_BOT_AWS_SECRET_ACCESS_KEY: ${{ secrets.DEPLOYED_BOT_AWS_SECRET_ACCESS_KEY }}
+          DEPLOYED_BOT_PERPLEXITY_API_KEY: ${{ secrets.DEPLOYED_BOT_PERPLEXITY_API_KEY }}
+          DEPLOYED_BOT_PICA_SECRET_KEY: ${{ secrets.DEPLOYED_BOT_PICA_SECRET_KEY }}
         run: bun run test 
