Installs FLY CLI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
         working-directory: platform/apps/backend
         run: bun install
 
+      - name: Install Fly CLI
+        run: curl -L https://fly.io/install.sh | sh
+
       - name: Backend - Test
         working-directory: platform
         env:
