--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -5,11 +5,11 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "8.11.11",
-    "drizzle-kit": "0.30.3",
+    "drizzle-kit": "0.30.6",
     "tsx": "4.19.2"
   },
   "scripts": {
-    "start": "drizzle-kit generate && drizzle-kit migrate && bun run src/index.ts",
+    "start": "bun run src/index.ts",
     "dev": "bun run --watch src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
