feat: add typesafe router

--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -8,7 +8,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "react-router typegen && tsc",
     "dev": "tsc --watch",
     "test": "prettier --check . && xo && ava",
     "format": "prettier --write .",
@@ -28,7 +28,9 @@
     "ink-text-input": "6.0.0",
     "meow": "13.2.0",
     "node-fetch": "3.3.2",
+    "query-string": "^9.1.1",
     "react": "^18.2.0",
+    "react-router": "^7.4.1",
     "zod": "^3.24.2",
     "zustand": "5.0.3"
   },
