--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -5,12 +5,11 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "8.11.11",
-    "drizzle-kit": "0.30.6",
-    "tsx": "4.19.2"
+    "drizzle-kit": "0.30.6"
   },
   "scripts": {
-    "start": "bun run src/index.ts",
-    "dev": "bun run --watch src/index.ts",
+    "start": "npm run db:generate && npm run db:migrate && bun run src/index.ts",
+    "dev": "npm run db:generate && npm run db:migrate && bun run --watch src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "test": "bun test"
