stop running migrations on server startup

--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -8,8 +8,8 @@
     "drizzle-kit": "0.30.6"
   },
   "scripts": {
-    "start": "npm run db:generate && npm run db:migrate && bun run src/index.ts",
-    "dev": "npm run db:generate && npm run db:migrate && bun run --watch src/index.ts",
+    "start": "bun run src/index.ts",
+    "dev": "bun run --watch src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "test": "bun test"
