--- a/platform/Dockerfile.backend
+++ b/platform/Dockerfile.backend
@@ -14,7 +14,10 @@ ENV NODE_ENV="production"
 
 # Install packages needed to build node modules
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y ca-certificates nodejs npm unzip
+    apt-get install --no-install-recommends -y ca-certificates curl gnupg && \
+    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
+    apt-get update -qq && \
+    apt-get install --no-install-recommends -y nodejs unzip
 
 # Throw-away build stage to reduce size of final image
 FROM base AS build
