--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "5.69.0",
     "dotenv": "^16.4.7",
     "ink": "5.2.0",
+    "ink-divider": "^4.1.1",
     "ink-spinner": "^5.0.0",
     "ink-syntax-highlight": "2.0.2",
     "meow": "13.2.0",
