--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -25,6 +25,7 @@
     "ink-divider": "^4.1.1",
     "ink-spinner": "^5.0.0",
     "ink-syntax-highlight": "2.0.2",
+    "ink-text-input": "^6.0.0",
     "meow": "13.2.0",
     "node-fetch": "3.3.2",
     "query-string": "^9.1.1",
