--- a/app-build-cli/package.json
+++ b/app-build-cli/package.json
@@ -21,6 +21,8 @@
     "@inkjs/ui": "2.0.0",
     "@tanstack/react-query": "5.69.0",
     "dotenv": "^16.4.7",
+    "eventsource": "^3.0.6",
+    "eventsource-client": "^1.1.3",
     "ink": "5.2.0",
     "ink-divider": "^4.1.1",
     "ink-spinner": "^5.0.0",
