--- a/platform/apps/backend/package.json
+++ b/platform/apps/backend/package.json
@@ -27,7 +27,10 @@
     "aws-sdk": "2.1692.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
+    "eventsource": "^3.0.6",
+    "eventsource-client": "^1.1.3",
     "fastify": "5.2.1",
+    "fastify-sse-v2": "^4.2.1",
     "jose": "5.10.0",
     "toad-scheduler": "3.0.1",
     "uuid": "11.0.5",
