--- a/platform/mocked-agent/package.json
+++ b/platform/mocked-agent/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "eventsource-client": "^1.1.3",
     "fastify": "^5.2.2",
     "fastify-sse-v2": "^4.2.1"
   }
