--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
     "@octokit/app": "^14.0.0",
     "@octokit/auth-app": "^5.0.0",
     "@octokit/rest": "^20.0.0",
+    "@stackframe/stack": "2.8.11",
     "aws-sdk": "2.1692.0",
     "better-sse": "0.14.1",
     "dotenv": "16.4.7",
