--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
-        working-directory: apps/backend
+      - run: bun deploy:backend
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
