fix: run fly cli

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: bun deploy:backend
+      - run: fly deploy --config=./apps/backend/fly.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
