--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -2,15 +2,15 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - main # change to main if needed
+      - main
 jobs:
   deploy:
-    name: Deploy app
+    name: Deploy backend
     runs-on: ubuntu-latest
-    concurrency: deploy-group # optional: ensure only one action runs at a time
+    concurrency: deploy-backend-group # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: fly deploy --config=./apps/backend/fly.toml
+      - run: flyctl deploy --config=./apps/backend/fly.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
