--- a/.github/workflows/backend-prod.yml
+++ b/.github/workflows/backend-prod.yml
@@ -26,19 +26,4 @@ jobs:
           git-docker-dockerfile: apps/backend/Dockerfile.backend
           privileged: true
           skip-cache: true
-          service-env: |
-            AWS_ACCESS_KEY_ID=@AWS_ACCESS_KEY_ID
-            AWS_SECRET_ACCESS_KEY=@AWS_SECRET_ACCESS_KEY
-            AWS_REGION=@AWS_REGION
-            AWS_ECR_URL=@AWS_ECR_URL
-            AWS_ECR_NAMESPACE=@AWS_ECR_NAMESPACE
-            NEON_API_KEY=@NEON_API_KEY
-            AGENT_API_SECRET_AUTH=@AGENT_API_SECRET_AUTH
-            STACK_PROJECT_ID=@STACK_PROJECT_ID
-            STACK_PUBLISHABLE_CLIENT_KEY=@STACK_PUBLISHABLE_CLIENT_KEY
-            STACK_SECRET_SERVER_KEY=@STACK_SECRET_SERVER_KEY
-            GITHUB_APP_ID=@GITHUB_APP_ID
-            GITHUB_APP_PRIVATE_KEY=@GITHUB_APP_PRIVATE_KEY
-            GITHUB_APP_BOT_EMAIL=@GITHUB_APP_BOT_EMAIL
-            DATABASE_URL=@DATABASE_URL
-            KOYEB_CLI_TOKEN=@KOYEB_CLI_TOKEN
+          service-env: AWS_ACCESS_KEY_ID=@AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY=@AWS_SECRET_ACCESS_KEY,AWS_REGION=@AWS_REGION,AWS_ECR_NAMESPACE=@AWS_ECR_NAMESPACE,NEON_API_KEY=@NEON_API_KEY,AGENT_API_SECRET_AUTH=@AGENT_API_SECRET_AUTH,STACK_PROJECT_ID=@STACK_PROJECT_ID,STACK_PUBLISHABLE_CLIENT_KEY=@STACK_PUBLISHABLE_CLIENT_KEY,STACK_SECRET_SERVER_KEY=@STACK_SECRET_SERVER_KEY,GITHUB_APP_ID=@GITHUB_APP_ID,GITHUB_APP_PRIVATE_KEY=@GITHUB_APP_PRIVATE_KEY,DATABASE_URL=@DATABASE_URL,KOYEB_CLI_TOKEN=@KOYEB_CLI_TOKEN
