--- a/.github/workflows/backend-prod.yml
+++ b/.github/workflows/backend-prod.yml
@@ -10,6 +10,8 @@ jobs:
       cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Install and configure the Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
         with:
