--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "type": "module",
   "bin": {
-    "app.build": "dist/cli.js"
+    "app.build": "dist/tools/cli-entrypoint.js"
   },
   "files": [
     "dist",
@@ -67,7 +67,7 @@
     "xo": "^0.53.1"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "publishConfig": {
     "access": "public"
