--- a/.github/workflows/cli-release-prod.yml
+++ b/.github/workflows/cli-release-prod.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Run promote script
         env:
